# sigil

./: .gitignore  GpLang.hs  LICENSE  README.md  Sigil.hs  gplang.cabal  sigil.cabal  sources.txt
Language/: Sigil.hs
Language/Sigil/: Exec.hs  Execution.hs  Ops.hs  Parser.hs  Show.hs  Stack.hs  Types.hs
specs/: Specs.hs
tests/: TestSigil.hs
tests/Test/: Utils.hs
tests/Test/Sigil/: Exec.hs  Ops.hs  Parser.hs  Types.hs
